<resources>
    <string name="app_name">FindTutor</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_add_tutor">Add Tutor</string>
    <string name="menu_view_tutor">View Tutor</string>

    <string name="favourite_tutor">Favourite Tutor</string>
    <string name="menu_search_tutor">Search Tutor</string>

    <string name="list_tutor_title">Search and List of Tutors</string>
    <string name="list_tutor_hint">Search Tutor</string>

    <string name="list_tutor_info">you can search by any attribute of tutor.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="qualification_array">
        <item>Please Select Qualification</item>
        <item>Bachelor</item>
        <item>Master</item>
        <item>Phd</item>
    </string-array>
    <string name="title_activity_user">UserActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_student">StudentActivity</string>

    <string name="contactby">CONTACT BY</string>
    <string name="LOGIN_AS">LOGIN_AS</string>

    <string name="contactByEmail">Email</string>

    <string name="contactByPhone">Phone</string>
</resources>