<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nameTutorListItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Name"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/courseTutorListItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="course"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/courseCodeTutorListItemText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTutorListItemText" />

    <TextView
        android:id="@+id/courseCodeTutorListItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="course"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/courseTutorListItemText"
        app:layout_constraintTop_toBottomOf="@+id/nameTutorListItemText" />

    <TextView
        android:id="@+id/qualificationTutorListItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="qualification"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/cityTutorListItemText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseCodeTutorListItemText" />

    <TextView
        android:id="@+id/infocontacta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/contactby"
        android:textColor="@color/cardview_dark_background"
        android:textSize="14sp"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qualificationTutorListItemText" />

    <Button
        android:id="@+id/contactByPhoneBtn"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/contactByPhone"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/contactByEmailBtn"
        app:layout_constraintTop_toBottomOf="@+id/infocontacta" />

    <Button
        android:id="@+id/contactByEmailBtn"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/contactByEmail"
        app:layout_constraintEnd_toStartOf="@+id/contactByPhoneBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infocontacta" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="105dp" />

    <ImageView
        android:id="@+id/favBtnTutor"
        android:layout_width="33dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toEndOf="@+id/nameTutorListItemText"
        app:layout_constraintTop_toBottomOf="@+id/actionBtnsInfo"
        app:srcCompat="@drawable/ic_baseline_favorite_24" />

    <TextView
        android:id="@+id/actionBtnsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="Click to Fav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toEndOf="@+id/nameTutorListItemText"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/deleteBtn"
        android:layout_width="33dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/actionBtnsInfo"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        tools:visibility="visible" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactByPhoneBtn" />

    <TextView
        android:id="@+id/cityTutorListItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="city"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/qualificationTutorListItemText"
        app:layout_constraintTop_toBottomOf="@+id/courseCodeTutorListItemText" />

</androidx.constraintlayout.widget.ConstraintLayout>